# evade

./: .gitignore  README.md  flake.nix  pyproject.toml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
src/: audio.py  audio_analysis.py  comparer.py  data.py  detection.py  main.py  model.py  notifacation.py  notification.py  precompute_embeddings.py  settings.py  similarity.py
